--- a/TableAdvanced/src/tableadvanced/DataPanel.form
+++ b/TableAdvanced/src/tableadvanced/DataPanel.form
@@ -18,7 +18,7 @@
     <Property name="useNullLayout" type="boolean" value="true"/>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JComboBox" name="jcb">
+    <Component class="javax.swing.JComboBox" name="jcbValType">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
